change button colors

--- a/WindWaveMainPage/index.html
+++ b/WindWaveMainPage/index.html
@@ -44,16 +44,16 @@
         <script language="javascript"></script>
 
             <p>A
-                <button id="A01" onclick="clickeA1()" value="who">👍</button>
-                <button id="A02" onclick="clickeA2()" value="who">👍</button>
-                <button id="A03" onclick="clickeA3()" value="who">👍</button>
-                <button id="A04" onclick="clickeA4()" value="who">👍</button>
-                <button id="A05" onclick="clickeA5()" value="who">👍</button>
-                <button id="A06" onclick="clickeA6()" value="who">👍</button>
-                <button id="A07" onclick="clickeA7()" value="who">👍</button>
-                <button id="A08" onclick="clickeA8()" value="who">👍</button>
-                <button id="A09" onclick="clickeA9()" value="who">👍</button>
-                <button id="A10" onclick="clickeA10()" value="who">👍</button>
+                <button id="A01" onclick="clickeA1()" value="who" style="background-color:rgb(0, 0, 0)">	👍 </button>
+                <button id="A02" onclick="clickeA2()" value="who" style="background-color:rgb(0, 0, 0)">👍</button>
+                <button id="A03" onclick="clickeA3()" value="who" style="background-color:rgb(0, 0, 0)">👍</button>
+                <button id="A04" onclick="clickeA4()" value="who" style="background-color:rgb(0, 0, 0)">👍</button>
+                <button id="A05" onclick="clickeA5()" value="who" style="background-color:rgb(0, 0, 0)">👍</button>
+                <button id="A06" onclick="clickeA6()" value="who" style="background-color:rgb(0, 0, 0)">👍</button>
+                <button id="A07" onclick="clickeA7()" value="who" style="background-color:rgb(0, 0, 0)">👍</button>
+                <button id="A08" onclick="clickeA8()" value="who" style="background-color:rgb(0, 0, 0)">👍</button>
+                <button id="A09" onclick="clickeA9()" value="who" style="background-color:rgb(0, 0, 0)">👍</button>
+                <button id="A10" onclick="clickeA10()" value="who" style="background-color:rgb(0, 0, 0)">👍</button>
         A</p>
             
         
