--- a/NeverStop/WINDWAVE.html
+++ b/NeverStop/WINDWAVE.html
@@ -198,7 +198,7 @@
         <p>Tickets already sold: <span id="balanceDisplay"></span></p>
         <p>Total number of tickets: 103 <span id="totalSupplyDisplay"></span></p>
         <br><br>
-        <a href="http://127.0.0.1:5501/WindWaveMainPage/wave.html"><button>❓ Where do the waves come from?</button></a>
+        <a href="https://emair2.github.io/WindWave/NeverStop/wave"><button>❓ Where do the waves come from?</button></a>
       </div>
 
       
