update seat mint

--- a/NeverStop/wave.html
+++ b/NeverStop/wave.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="lib/ethers-5.6.umd.min.js"></script>
+    <script src="lib/jquery-3.6.1.min.js"></script>
     <script src="abi.js" defer></script>
     <script src="wave.js" defer></script>
 
