--- a/NeverStop/index.html
+++ b/NeverStop/index.html
@@ -196,7 +196,7 @@
         <div id="sorry">Sorry, No wind, no waves.</div>
         <br><br><br>
         
-        <p>Tickets already sold: <span id="balanceDisplay"></span></p>
+        <p>How many Tickets you have: <span id="balanceDisplay"></span></p>
         <p>Total number of tickets: 103 <span id="totalSupplyDisplay"></span></p>
         <br><br>
         <a href="https://emair2.github.io/WindWave/NeverStop/wave"><button>❓ Where do the waves come from?</button></a>
