upload video link

--- a/NeverStop/wave.html
+++ b/NeverStop/wave.html
@@ -23,7 +23,7 @@
         <hr>
       <div class="indextext">
         <p style="color:aliceblue"><strong>📺 Waves live 📺</strong></p>
-        <video src="CITY.mp4" width="80%" controls></video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUzZNV_2anE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
         <audio id="sound" src="sound/WaveSound.mp3" loop controls></audio>
