--- a/NeverStop/index.html
+++ b/NeverStop/index.html
@@ -199,7 +199,7 @@
         <p>How many Tickets you have: <span id="balanceDisplay"></span></p>
         <p>Total number of tickets: 103 <span id="totalSupplyDisplay"></span></p>
         <br><br>
-        <a href="https://emair2.github.io/WindWave/NeverStop/wave"><button>❓ Where do the waves come from?</button></a>
+        <a href="https://www.emair-zhu.com/windwave"><button>❓ Where do the waves come from?</button></a>
       </div>
 
       
